--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,1 @@
-PORT=5000
-MONGO_URI=mongodb://localhost:27017/expertBookingDB
+MONGO_URI=mongodb+srv://sumit:Sumit1234@cluster0.ns2pdnv.mongodb.net/
